log
Sat, Mar 22, 2025  9:10:42 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 23, 2025 11:45:31 AM: 
 exercises.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
5f4275f
Sun, Mar 23, 2025 12:03:29 PM: 
 tests:  0|5
total_score: 0/70
4282ded
Sun, Mar 23, 2025 12:04:30 PM: 
 tests:  0|5
total_score: 0/70
c5d4afb
Sun, Mar 23, 2025 12:07:04 PM: 
 tests:  0|5
total_score: 0/70
64691fc
Sun, Mar 23, 2025 12:10:37 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
090ee2a
Sun, Mar 23, 2025 12:17:43 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e36da42
Sun, Mar 23, 2025 12:21:40 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:80:15: error: comparison between pointer and integer [-Werror]
    while(dato != elem) {
               ^~
cc1.exe: all warnings being treated as errors
Compilation failed
9d59b16
Sun, Mar 23, 2025 12:22:04 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
547c71a
Sun, Mar 23, 2025 12:27:17 PM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:106:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
ae63ea2
